fix overflow x

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -146,6 +146,11 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1.6;
